--- a/PointsDemo.Library/PointsDemo.Library.csproj
+++ b/PointsDemo.Library/PointsDemo.Library.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Line.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="Point3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
