--- a/PointsDemo.Library.Tests/PointsDemo.Library.Tests.csproj
+++ b/PointsDemo.Library.Tests/PointsDemo.Library.Tests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Point3DTests.cs" />
     <Compile Include="PointTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
